2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (ACLOCAL_AMFLAGS): Add ${ACLOCAL_FLAGS} as
	recommended by James Henstridge.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (install-schemas): Don't use $^ since it probably
	isn't portable.
	(uninstall-schemas): ditto.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (PCRE_CHECK_VERSION): Bump version requirement to
	libpcre 4.0.  Apparently the code required this version for quite
	some time now, but without configure checking for it.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/pcreshell.cc (Pattern::Pattern): Let's be paranoid and
	use g_new0() rather than plain g_new() to allocate ovector_.
	(Pattern::get_substring_bounds): More paranoia: assert that
	the index argument is within the allowed range.
	(Pattern::get_substring): Call get_substring_bounds() to get the
	boundary offsets in order to take advantage of the error checking.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.cc (convert_to_ascii): Replace non-ASCII
	characters by octal escapes rather than just a question mark.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filebuffer.cc (RegexxerTags::instance): Remove G_GNUC_CONST
	because it causes problems on PPC, and doesn't have any effect in
	this particular case anyway.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.{cc,h} (MainWindow::get_folder_fullname): New
	method that expands the entered folder name and converts it to
	filename encoding.  An error message is displayed to the user
	if the conversion fails.
	(MainWindow::on_select_folder): Use get_folder_fullname().
	(MainWindow::on_find_files): ditto.

2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} (expand_pathname): Operate directly in
	filename encoding since all callers need to convert one way or
	the other anyway.  Change type of parameter and return value to